# afrim-keyboard

./: .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  Makefile  README.md  build.gradle  gradle.properties  settings.gradle
.github/workflows/: pull-request-ci.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: .gitignore
app/src/main/assets/afrim-data/: README.md
app/src/main/assets/afrim-data/afrim/: afrim.toml
app/src/main/assets/afrim-data/am/: am.toml
app/src/main/assets/afrim-data/am/scripts/datetime/: date.rhai
app/src/main/assets/afrim-data/clafrica/: clafrica.toml
app/src/main/assets/afrim-data/fmp/: fmp.toml
app/src/main/assets/afrim-data/fmp/scripts/datetime/: date.rhai
app/src/main/assets/afrim-data/gez/: gez.toml
app/src/main/assets/afrim-data/gez/scripts/: numerals.rhai
app/src/main/java/cm/pythonbrad/afrim/compat/: EditorInfoCompatUtils.java  MenuItemIconColorCompat.java  PreferenceManagerCompat.java  ViewOutlineProviderCompatUtils.java  ViewOutlineProviderCompatUtilsLXX.java
app/src/main/java/cm/pythonbrad/afrim/core/: Afrim.java  Command.java  Deserializer.java  KeyEvent.java  Serializer.java
app/src/main/java/cm/pythonbrad/afrim/data/: DataManager.java
app/src/main/java/cm/pythonbrad/afrim/event/: Event.java  (+1 more)
app/src/main/jni/: .gitignore  CMakeLists.txt
app/src/main/jni/afrim_jni/: Cargo.toml  LICENSE  bootstrap.h
app/src/main/jni/afrim_jni/src/: afrim_api.rs  lib.rs  utils.rs
app/src/main/jni/afrim_jni/src/afrim_api/: mod.rs  preprocessor.rs  service.rs  translator.rs
app/src/main/res/layout/: input_view.xml  main_keyboard_frame.xml  more_keys_keyboard.xml
app/src/main/res/values/: attrs.xml  donottranslate.xml  keyboard-themes.xml  strings-appname.xml  strings.xml
app/src/main/res/values-b+sr+Latn/: strings.xml
app/src/main/res/values-be-rBY/: strings.xml
app/src/main/res/values-bg/: strings.xml
app/src/main/res/values-bn-rBD/: strings.xml
app/src/main/res/values-cs/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-el/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-eu-rES/: strings.xml
app/src/main/res/values-fa/: strings.xml
app/src/main/res/values-fi/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-gl-rES/: strings.xml
app/src/main/res/values-hr/: strings.xml
app/src/main/res/values-in/: strings.xml
app/src/main/res/values-it/: strings.xml
app/src/main/res/values-lt/: strings.xml
app/src/main/res/values-mk-rMK/: strings.xml
app/src/main/res/values-nb/: strings.xml
app/src/main/res/values-nl/: strings.xml
app/src/main/res/values-pl/: strings.xml
app/src/main/res/values-pt/: strings.xml
app/src/main/res/values-pt-rPT/: strings.xml
app/src/main/res/values-ro/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-sk/: strings.xml
app/src/main/res/values-sr/: strings.xml
app/src/main/res/values-tr/: strings.xml
app/src/main/res/values-uk/: strings.xml
app/src/main/res/values-v24/: keyboard-themes.xml
app/src/main/res/values-vi/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/values-zh-rTW/: strings.xml
app/src/main/res/xml/: method.xml  prefs.xml  prefs_screen_appearance.xml  prefs_screen_key_press.xml
gradle/wrapper/: gradle-wrapper.properties
metadata/en-US/: full_description.txt  short_description.txt
(+195 files in other folders)
