[package]
name = "afrim_jni"
authors = ["Brady Fomegne <fomegnemeudje@outlook.com>"]
edition = "2021"
description = "A jni binding to the afrim library"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[features]
default = []
inhibit = ["afrim-preprocessor/inhibit"]

[dependencies]
afrim-config = { version = "0.4.3", git = "https://github.com/pythonbrad/afrim" }
afrim-preprocessor = { version = "0.5.1", default-features = false, git = "https://github.com/pythonbrad/afrim", features = ["serde"]  }
afrim-translator = { version = "0.1.3", git = "https://github.com/pythonbrad/afrim", features = ["serde"] }
indexmap = "2.2.3"
jni = "0.21.1"
once_cell = "1.19.0"
rhai = "1.17.1"
serde_json = "1.0.114"
