[package]
name = "afrim_jni"
authors = ["Brady Fomegne <fomegnemeudje@outlook.com>"]
edition = "2021"
description = "A jni binding to the afrim library"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[features]
default = []
inhibit = ["afrim-preprocessor/inhibit"]
rhai = ["afrim-translator/rhai", "afrim-config/rhai"]

[dependencies]
afrim-config = { version = "0.4.4", default-features = false }
afrim-preprocessor = { version = "0.6.0", default-features = false, features = ["serde"] }
afrim-translator = { version = "0.1.4", default-features = false }
indexmap = "2.2.3"
jni = "0.21.1"
once_cell = "1.19.0"
serde_json = "1.0.114"
